--- a/public/src/index.html
+++ b/public/src/index.html
@@ -4,15 +4,32 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <!-- *******  Font Awesome Icons Link  ******* -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    />
+
     <link rel="stylesheet" href="style.css" />
 
     <title>ESTILO</title>
   </head>
   <body>
-    <div class="container">
-      <img src="images/logo-image.jpg" alt="Logo Image" />
-    </div>
+    <nav>
+      <input type="checkbox" id="check" />
+      <label for="check" class="checkbtn">
+        <i class="fas fa-bars"></i>
+      </label>
+      <label class="logo" for="logo">ESTILO</label>
+      <ul>
+        <li><a class="active" href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Types</a></li>
+        <li><a href="ContactForm.html">Contact</a></li>
+      </ul>
+    </nav>
 
+    <section></section>
     <footer>
       <small> © Shulamit Attali </small>
     </footer>
