--- a/public/src/ContactForm.html
+++ b/public/src/ContactForm.html
@@ -21,6 +21,23 @@
     <title>Contact Form</title>
   </head>
   <body>
+    <div class="logo-container">
+      <img src="images/logo.png" alt="Company Logo" />
+    </div>
+
+    <nav>
+      <input type="checkbox" id="check" />
+      <label for="check" class="checkbtn">
+        <i class="fas fa-bars"></i>
+      </label>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="#">About Us</a></li>
+        <li><a href="types.html">Types</a></li>
+        <li><a href="faq.html">FAQ</a></li>
+        <li><a class="active" href="#">Contact</a></li>
+      </ul>
+    </nav>
     <div class="container">
       <main class="row">
         <!-- left colomn section sarts here-->
