--- a/public/src/index.html
+++ b/public/src/index.html
@@ -15,22 +15,50 @@
     <title>ESTILO</title>
   </head>
   <body>
+    <div class="logo-container">
+      <img src="images/logo.png" alt="Company Logo" />
+    </div>
+
     <nav>
       <input type="checkbox" id="check" />
       <label for="check" class="checkbtn">
         <i class="fas fa-bars"></i>
       </label>
-      <label class="logo" for="logo">ESTILO</label>
       <ul>
         <li><a class="active" href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Types</a></li>
+        <li><a href="#">About Us</a></li>
+        <li><a href="types.html">Types</a></li>
+        <li><a href="faq.html">FAQ</a></li>
         <li><a href="ContactForm.html">Contact</a></li>
       </ul>
     </nav>
 
     <section></section>
-    <footer>
+    <footer class="footer">
+      <div class="footer-container">
+        <div class="row">
+          <div class="footer-col">
+            <h4>Company</h4>
+            <ul>
+              <li><a href="index.html"></a>Home</li>
+              <li><a href="about.html"></a>About Us</li>
+            </ul>
+          </div>
+          <div class="footer-col">
+            <h4>Get Help</h4>
+            <ul>
+              <li><a href="faq.html"></a> FAQ</li>
+              <li><a href="ContactForm.html"></a>Contact Us</li>
+            </ul>
+          </div>
+          <div class="footer-col">
+            <h4>Follow Us</h4>
+            <div class="social-links"></div>
+                <a href="https://wa.me/972586932203"><i class="fab fa-whatsapp"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
       <small> © Shulamit Attali </small>
     </footer>
   </body>
