--- a/public/src/index.html
+++ b/public/src/index.html
@@ -38,28 +38,33 @@
       <div class="footer-container">
         <div class="row">
           <div class="footer-col">
-            <h4>Company</h4>
+            <h4>company</h4>
             <ul>
-              <li><a href="index.html"></a>Home</li>
-              <li><a href="about.html"></a>About Us</li>
+              <li><a href="index.html">home</li></a>
+              <li><a href="about.html">about Us</li></a>
             </ul>
           </div>
           <div class="footer-col">
-            <h4>Get Help</h4>
+            <h4>get help</h4>
             <ul>
-              <li><a href="faq.html"></a> FAQ</li>
-              <li><a href="ContactForm.html"></a>Contact Us</li>
+              <li><a href="faq.html"> faq</li></a>
+              <li><a href="ContactForm.html">contact us</li></a>
             </ul>
           </div>
           <div class="footer-col">
-            <h4>Follow Us</h4>
-            <div class="social-links"></div>
-                <a href="https://wa.me/972586932203"><i class="fab fa-whatsapp"></i></a>
+            <h4>follow us</h4>
+            <div class="social-links">
+              <a target="_blank" href="https://wa.me/972586932203"
+                ><i class="fab fa-whatsapp"></i
+              ></a>
+              <a href="https://wa.me/972586932203"
+                ><i class="fab fa-instagram"></i
+              ></a>
             </div>
           </div>
         </div>
       </div>
-      <small> © Shulamit Attali </small>
+      <small class="rights"> © Shulamit Attali </small>
     </footer>
   </body>
 </html>
