--- a/public/src/index.html
+++ b/public/src/index.html
@@ -16,7 +16,9 @@
   </head>
   <body>
     <div class="logo-container">
-      <img src="images/logo.png" alt="Company Logo" />
+      <a class="logo-link" href="index.html">
+        <img class="image" src="images/logo.png" alt="Company Logo" />
+      </a>
     </div>
 
     <nav>
@@ -24,6 +26,10 @@
       <label for="check" class="checkbtn">
         <i class="fas fa-bars"></i>
       </label>
+      <div class="search-container">
+        <i class="search-icon" onclick="toggleSearch()">🔍</i>
+        <input type="text" class="search-input" placeholder="Search..." />
+      </div>
       <ul>
         <li><a class="active" href="#">Home</a></li>
         <li><a href="#">About Us</a></li>
@@ -33,38 +39,63 @@
       </ul>
     </nav>
 
+    <div class="slide-1">
+      <img src="images/img2.jpg" alt="" />
+      <div class="slide-text">
+        <h1>Made To Measure Wedding Packages</h1>
+        <span></span>
+        <p>
+          Wedding Tuxedos from $950<br />
+          Wedding Suits from $850
+        </p>
+      </div>
+      <!--<div class="slide-2">
+      <img src="images/img3.jpg" alt="" />
+      <div class="slide-text">
+        <h1>Estilo Custom Made Suits</h1>
+        <span></span>
+        <p>
+          Suits Starts From $450<br />
+        </p>
+      </div>-->
+    </div>
+
     <section></section>
-    <footer class="footer">
-      <div class="footer-container">
-        <div class="row">
-          <div class="footer-col">
-            <h4>company</h4>
-            <ul>
-              <li><a href="index.html">home</li></a>
-              <li><a href="about.html">about Us</li></a>
-            </ul>
-          </div>
-          <div class="footer-col">
-            <h4>get help</h4>
-            <ul>
-              <li><a href="faq.html"> faq</li></a>
-              <li><a href="ContactForm.html">contact us</li></a>
-            </ul>
-          </div>
-          <div class="footer-col">
-            <h4>follow us</h4>
-            <div class="social-links">
-              <a target="_blank" href="https://wa.me/972586932203"
-                ><i class="fab fa-whatsapp"></i
-              ></a>
-              <a href="https://wa.me/972586932203"
-                ><i class="fab fa-instagram"></i
-              ></a>
+    <footer>
+      <div class="footer">
+        <div class="footer-container">
+          <div class="row">
+            <div class="footer-col">
+              <h4>company</h4>
+              <ul>
+                <li><a href="index.html">home</a></li>
+                <li><a href="about.html">about Us</a></li>
+              </ul>
+            </div>
+            <div class="footer-col">
+              <h4>get help</h4>
+              <ul>
+                <li><a href="faq.html"> faq</a></li>
+                <li><a href="ContactForm.html">contact us</a></li>
+              </ul>
+            </div>
+            <div class="footer-col">
+              <h4>follow us</h4>
+              <div class="social-links">
+                <a target="_blank" href="https://wa.me/972586932203"
+                  ><i class="fab fa-whatsapp"></i
+                ></a>
+                <a href="https://wa.me/972586932203"
+                  ><i class="fab fa-instagram"></i
+                ></a>
+              </div>
             </div>
           </div>
         </div>
       </div>
       <small class="rights"> © Shulamit Attali </small>
     </footer>
+    <script src="main.js"></script>
+    <!-- Link to the JavaScript file -->
   </body>
 </html>
