--- a/public/src/HTML/index.html
+++ b/public/src/HTML/index.html
@@ -10,14 +10,14 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     />
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./../CSS/style.css" />
 
     <title>ESTILO</title>
   </head>
   <body>
     <div class="logo-container">
-      <a class="logo-link" href="index.html">
-        <img class="image" src="images/logo.png" alt="Company Logo" />
+      <a class="logo-link" href="./index.html">
+        <img class="image" src="./../images/logo.png" alt="Company Logo" />
       </a>
     </div>
 
@@ -32,15 +32,15 @@
       </div>
       <ul>
         <li><a class="active" href="#">Home</a></li>
-        <li><a href="#">About Us</a></li>
-        <li><a href="types.html">Types</a></li>
-        <li><a href="faq.html">FAQ</a></li>
-        <li><a href="ContactForm.html">Contact</a></li>
+        <li><a href="./index.html">About Us</a></li>
+        <li><a href="./types.html">Types</a></li>
+        <li><a href="./faq.html">FAQ</a></li>
+        <li><a href="./ContactForm.html">Contact</a></li>
       </ul>
     </nav>
 
     <div class="slide-1">
-      <img src="images/img2.jpg" alt="" />
+      <img src="./../images/img2.jpg" alt="" />
       <div class="slide-text">
         <h1>Made To Measure Wedding Packages</h1>
         <span></span>
@@ -48,6 +48,7 @@
           Wedding Tuxedos from $950<br />
           Wedding Suits from $850
         </p>
+        <a href="./ContactForm.html"><button>schedule an appoitment</button></a>
       </div>
       <!--<div class="slide-2">
       <img src="images/img3.jpg" alt="" />
@@ -60,7 +61,33 @@
       </div>-->
     </div>
 
-    <section></section>
+    <div class="sentences-container">
+      <div class="sentences">
+        <p>Don't just fit in, find your <br />own perfect fit.</p>
+        <p>Get personalized styling <br />and fit advice.</p>
+        <p>
+          The most comprehensive<br />
+          Custom Made program.
+        </p>
+      </div>
+    </div>
+
+    <!--<div class="about-container">
+      <div class="about">
+        <div class="text">
+          <h1>About Estilo Custom Made</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus
+            labore, eveniet, perferendis impedit excepturi mollitia nisi
+            reiciendis quo, corporis magnam nobis rerum iste esse qui delectus
+            ex enim quia tempore.
+          </p>
+          <button>book an apoitment</button>
+        </div>
+        <img src="" alt="" />
+      </div>
+    </div>
+    <section></section>-->
     <footer>
       <div class="footer">
         <div class="footer-container">
@@ -68,15 +95,15 @@
             <div class="footer-col">
               <h4>company</h4>
               <ul>
-                <li><a href="index.html">home</a></li>
-                <li><a href="about.html">about Us</a></li>
+                <li><a href="./index.html">home</a></li>
+                <li><a href="./about.html">about Us</a></li>
               </ul>
             </div>
             <div class="footer-col">
               <h4>get help</h4>
               <ul>
-                <li><a href="faq.html"> faq</a></li>
-                <li><a href="ContactForm.html">contact us</a></li>
+                <li><a href="./faq.html"> faq</a></li>
+                <li><a href="./ContactForm.html">contact us</a></li>
               </ul>
             </div>
             <div class="footer-col">
@@ -95,7 +122,7 @@
       </div>
       <small class="rights"> © Shulamit Attali </small>
     </footer>
-    <script src="main.js"></script>
+    <script src="./../JS/main.js"></script>
     <!-- Link to the JavaScript file -->
   </body>
 </html>
