--- a/public/src/HTML/examples.html
+++ b/public/src/HTML/examples.html
@@ -3,55 +3,111 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Navbar with Search</title>
+    <title>About Me</title>
     <style>
       * {
         margin: 0;
         padding: 0;
         box-sizing: border-box;
+        font-family: "Poppins", sans-serif;
       }
 
-      .slider,
-      .slide {
-        position: relative;
-        width: 100%;
-        height: 100vh; /* Full height of the viewport */
-        overflow: hidden; /* Hide overflow to ensure the image fits well */
+      body {
+        line-height: 1.6;
+        background-color: #f4f4f4;
+        color: #333;
+        padding: 20px;
       }
 
-      .slide img {
+      .container {
+        max-width: 1200px;
+        margin: 0 auto;
+        padding: 20px;
+        background-color: #fff;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        border-radius: 8px;
+      }
+
+      .profile-pic {
+        width: 150px;
+        height: 150px;
+        border-radius: 50%;
+        object-fit: cover;
+        margin: 0 auto;
         display: block;
-        width: 100%;
-        height: 100%;
-        object-fit: cover; /* Cover the entire container */
       }
 
-      .slide-text {
-        position: absolute;
-        bottom: 20px;
-        left: 20px;
-        color: white;
-        background-color: rgba(
-          0,
-          0,
-          0,
-          0.5
-        ); /* Optional: add background for better text visibility */
-        padding: 10px;
-        border-radius: 5px;
+      .about-text {
+        text-align: center;
+        padding: 20px;
+      }
+
+      .about-text h1 {
+        font-size: 2.5em;
+        margin-bottom: 10px;
+      }
+
+      .about-text p {
+        font-size: 1.2em;
+        margin-bottom: 20px;
+      }
+
+      .social-links {
+        display: flex;
+        justify-content: center;
+        gap: 10px;
+      }
+
+      .social-links a {
+        text-decoration: none;
+        color: #333;
+        font-size: 1.5em;
+      }
+
+      @media (max-width: 768px) {
+        .about-text h1 {
+          font-size: 2em;
+        }
+
+        .about-text p {
+          font-size: 1em;
+        }
+      }
+
+      @media (max-width: 480px) {
+        .about-text h1 {
+          font-size: 1.5em;
+        }
+
+        .about-text p {
+          font-size: 0.9em;
+        }
       }
     </style>
   </head>
   <body>
-    <div class="slider">
-      <div class="slide">
-        <img src="images/img5.jpg" alt="Slide 1" />
-        <div class="slide-text">
-          <h2>Slider Heading 1</h2>
-          <p>Description of slide 1</p>
-        </div>
+    <div class="container">
+      <img
+        src="path/to/profile-pic.jpg"
+        alt="Profile Picture"
+        class="profile-pic"
+      />
+      <div class="about-text">
+        <h1>About Me</h1>
+        <p>
+          Hello! I am [Your Name], a passionate web developer with expertise in
+          creating responsive and interactive websites. I love coding,
+          designing, and solving problems. My goal is to build user-friendly and
+          aesthetically pleasing web applications.
+        </p>
+      </div>
+      <div class="social-links">
+        <a href="https://www.linkedin.com/in/yourprofile" target="_blank"
+          >LinkedIn</a
+        >
+        <a href="https://github.com/yourprofile" target="_blank">GitHub</a>
+        <a href="https://twitter.com/yourprofile" target="_blank">Twitter</a>
       </div>
     </div>
-    <h1>hey</h1>
   </body>
 </html>
