--- a/public/src/HTML/ContactForm.html
+++ b/public/src/HTML/ContactForm.html
@@ -16,7 +16,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="contcat.css" />
+    <link rel="stylesheet" href="./../CSS/contcat.css" />
 
     <title>Contact Form</title>
   </head>
