--- a/public/src/HTML/faq.html
+++ b/public/src/HTML/faq.html
@@ -9,7 +9,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     />
 
-    <link rel="stylesheet" href="faq.css" />
+    <link rel="stylesheet" href="./../CSS/faq.css" />
 
     <title>Frequently Asked Questions</title>
   </head>
