--- a/public/src/HTML/index.html
+++ b/public/src/HTML/index.html
@@ -15,28 +15,32 @@
     <title>ESTILO</title>
   </head>
   <body>
-    <div class="logo-container">
-      <a class="logo-link" href="./index.html">
-        <img class="image" src="./../images/logo.png" alt="Company Logo" />
-      </a>
-    </div>
-
     <nav>
-      <input type="checkbox" id="check" />
-      <label for="check" class="checkbtn">
-        <i class="fas fa-bars"></i>
-      </label>
-      <div class="search-container">
-        <i class="search-icon" onclick="toggleSearch()">🔍</i>
-        <input type="text" class="search-input" placeholder="Search..." />
+      <div class="logo-container">
+        <a class="logo-link" href="./index.html">
+          <img class="image" src="./../images/logo.png" alt="Company Logo" />
+        </a>
       </div>
-      <ul>
-        <li><a class="active" href="#">Home</a></li>
-        <li><a href="./index.html">About Us</a></li>
-        <li><a href="./types.html">Types</a></li>
-        <li><a href="./faq.html">FAQ</a></li>
-        <li><a href="./ContactForm.html">Contact</a></li>
-      </ul>
+      <div class="nav">
+        <input type="checkbox" id="check" />
+        <label for="check" class="checkbtn">
+          <i class="fas fa-bars"></i>
+        </label>
+        <div class="search-container">
+          <i
+            class="fa-solid fa-magnifying-glass search-icon"
+            onclick="toggleSearch()"
+          ></i>
+          <input type="text" class="search-input" placeholder="Search..." />
+        </div>
+        <ul>
+          <li><a class="active" href="#">Home</a></li>
+          <li><a href="./about.html">About Us</a></li>
+          <li><a href="./types.html">Types</a></li>
+          <li><a href="./faq.html">FAQ</a></li>
+          <li><a href="./ContactForm.html">Contact</a></li>
+        </ul>
+      </div>
     </nav>
 
     <div class="slide-1">
@@ -61,6 +65,44 @@
       </div>-->
     </div>
 
+    <div class="card-container">
+      <div class="card">
+        <img src="./../images/img1.jpg" alt="" />
+        <div class="card-content">
+          <h3>card 1</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur
+            illo recusandae fuga dolor placeat rem voluptatem animi perferendis
+            nam delectus! Quasi recusandae beatae totam, eum vero temporibus
+            illo voluptatum ea?
+          </p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="./../images/img2.jpg" alt="" />
+        <div class="card-content">
+          <h3>card 2</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur
+            illo recusandae fuga dolor placeat rem voluptatem animi perferendis
+            nam delectus! Quasi recusandae beatae totam, eum vero temporibus
+            illo voluptatum ea?
+          </p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="./../images/img3.jpg" alt="" />
+        <div class="card-content">
+          <h3>card 3</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur
+            illo recusandae fuga dolor placeat rem voluptatem animi perferendis
+            nam delectus! Quasi recusandae beatae totam, eum vero temporibus
+            illo voluptatum ea?
+          </p>
+        </div>
+      </div>
+    </div>
     <div class="sentences-container">
       <div class="sentences">
         <p>Don't just fit in, find your <br />own perfect fit.</p>
@@ -71,7 +113,6 @@
         </p>
       </div>
     </div>
-
     <!--<div class="about-container">
       <div class="about">
         <div class="text">
